test/fail/InstanceArgumentsBraceSpaces.agda
module InstanceArgumentsBraceSpaces where

postulate
  A B : Set
  test : {{a : A} } → B
